css/style.css
@import url('https://fonts.googleapis.com/css?family=Lato:300,400,900&display=swap');

body {
    height: 100%;
    font-family: 'Lato', sans-serif;
}

.cover {
    height: 100vh;
    color: white;
    overflow: hidden;
    min-width: 930px;
}

.cover__photo {
    background-image: url(../imgs/coverDesk.jpg);
    background-size: cover;
    background-position: 0 auto;
    height: 100%;
}

.cover__header {
    position: fixed;
    padding-top: 12px;
    width: 95%;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    margin: 0;
    height: 100px;
}

.cover__brand {
    position: absolute;
    color: inherit;
    text-decoration: none;
    font-size: 32px;
    letter-spacing: -2px;
    line-height: 0.9;
    font-weight: 900;
    margin: 32px;
    z-index: 1;
    transition: border-left 0.5s ease-in-out;
}

.cover__brand:hover {
    border-left: 2px solid white;
}


.navigation__list {
    margin-right: 40px;
    font-size: 32px;
    font-weight: 300;
    list-style-type: none;
    display: flex;
}

.navigation__link {
    color: inherit;
    text-decoration: inherit;
}

.navigation__item {
    text-shadow: 2px 2px 2px rgba(172, 172, 172, 0.466);
    margin: 26px;
    opacity: 0.8;
    transition: transform 0.2s ease-in-out;
}

.navigation__item:hover{
    transform: scale(1.1);
    opacity: 1;
}

.about {
    min-width: 1100px;
    min-height: 100vh;
    min-width: 930px;
    background-image: linear-gradient(to right top, #9fc7d9, #84afc0, #6998a8, #4e8190, #336b79, #336b79, #336b79, #336b79, #4e8190, #6998a8, #84afc0, #9fc7d9);
    overflow: hidden;
}

.about__article {
    height: 100%;
    width: 90%;
    margin: 0 auto;
}

.about__header {
    height: 150px;
    display: flex;
    align-items: center;
}

.about__title {
    font-size: 64px;
    width: 95%;
    color: white;
    font-weight: 300;
    display: flex;
    align-items: center;
    margin: 0;
}


.about__grid {
    height: 100%;
    padding: 0 auto;
    display: grid;
    justify-content: center;
    grid-template-columns: 3fr 7fr;
    grid-column-gap: 8%;
}

.about__photo {
    background-image: url(../imgs/myphoto.png);
    background-size: cover; 
}

.about__text {
    color: #fefefe;
}

.about__person-name {
    margin: 16px 0 6px 0;
    font-size: 48px;
    letter-spacing: -3px;
    line-height: 0.9;
    font-weight: 900;
}

.about__person-title {
    margin: 0;
    font-size: 16px;
}

.about__person-description {
    font-size: 26px;
    margin-bottom: 64px;
}

.hobby {
    min-width: 930px;
    padding-bottom: 100px;
    overflow: hidden;
    background-image: linear-gradient(to right top, #bdaa4d, #c2b05a, #c7b566, #cbbb72, #d0c17e, #d0c17e, #d0c17e, #d0c17e, #cbbb72, #c7b566, #c2b05a, #bdaa4d);
    
}

.hobby__header {
    height: 150px;
    display: flex;
    align-items: center;
}

.hobby__title {
    font-size: 64px;
    width: 95%;
    color: black;
    font-weight: 300;
    display: flex;
    align-items: center;
    margin: 0;
}

.hobby__article {
    height: 100%;
    width: 90%;
    margin: 0 auto;
}

.hobby__grid {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-column-gap: 4%;
    grid-row-gap: 42px;
    justify-content: center;
    height: 100%;
}

.hobby__container {
    height: 50%;
}

.hobby__rectangle {
    height: 100%;
    padding: 16px;
    border-radius: 8px;
    background: #D6C98E;
    box-shadow: 10px 10px 14px 1px rgba(00,00,00,0.2);
}

.fa-headphones, .fa-laptop, .fa-running {
    padding-right: 12px;
    
}

.hobby__name {
    font-size: 32px;
    padding-bottom: 16px;
}

.hobby__photo {
    width: 100%;
    border-radius: 8px;
    margin-bottom: 8px;
}

.hobby__description {
    text-indent: 12px;
    font-size: 16px;
    line-height: 1.4;
}

.links {
    min-width: 930px;
    min-height: 100vh;
    padding-bottom: 48px;
    overflow: hidden;
    background: #f3e7e7;
}

.links__article {
    height: 100%;
    width: 90%;
    margin: 0 auto;
}

.links__header {
    height: 150px;
    display: flex;
    align-items: center;
}

.links__title {
    font-size: 64px;
    width: 95%;
    color: black;
    font-weight: 300;
    display: flex;
    align-items: center;
    margin: 0;
}

.links__name {
    font-size: 32px;
    font-weight: 900;
    margin-bottom: 16px;
}

.links__thumbnail {
    width: 176px;
    border-radius: 8px;
}

.links__rectangle {
    padding: 12px;
    width: 100%;
    min-height: 100px;
    margin-bottom: 22px;
    border-radius: 4px;
    box-shadow: 10px 10px 14px 1px rgba(00,00,00,0.2);
}

.links__rectangle-top {
    display: flex;
}
    
.links__description {
    margin: 0 12px 12px 12px;
    font-size: 20px;
}

.links__rectangle-bottom {
    display: flex;
    justify-content: space-between;
    margin: 0;
    width: 176px;
}

.links__link {
    font-size: 64px;
    transition: transform 0.2s ease-in-out;
}

.links__link:hover {
    transform: scale(1.2);
}

.links__link--youtube {
    color: red;
}

.links__link--facebook {
    color: #4267b2;
}

.contact {
    padding-bottom: 64px;
    min-width: 930px;
    min-height: 100vh;
    color: white;
    background-image: linear-gradient(to right top, #9fc7d9, #84afc0, #6998a8, #4e8190, #336b79, #336b79, #336b79, #336b79, #4e8190, #6998a8, #84afc0, #9fc7d9);
    overflow: hidden;
}

.contact__article {
    height: 100%;
    width: 90%;
    margin: 0 auto;
}

.contact__header {
    height: 150px;
    display: flex;
    align-items: center;
}

.contact__title {
    font-size: 64px;
    width: 95%;
    font-weight: 300;
    display: flex;
    align-items: center;
    margin: 0;
}

.contact__ask {
    font-weight: 400;
    font-size: 18px;
    margin-top: 0;
    margin-bottom: 46px;
}

.contact__form {
    display: grid;
    grid-template-columns: 150px 250px;
    grid-row-gap: 22px;
}

.contact__input {
    padding: 8px;
    border: none;
    border-radius: 8px;
    box-shadow: 10px 10px 14px 1px rgba(00,00,00,0.2);
}

.contact__label {
    font-weight: 300;
}

.contact__button {
    font-weight: 400;
    grid-column: 2/3;
    margin-top: 22px;
    height: 32px;
    border-radius: 8px;
    border: none;
    background: #bdaa4d;
    box-shadow: 10px 10px 14px 1px rgba(00,00,00,0.2);
    transition: background 0.15s;
}

.contact__button:hover {
    background: #9c8a30;
}

.contact__button:active {
    background: black;
}

.footer {
    background: #D6C98E;
    min-width: 930px;
    width: 100%;
}

.footer__text {
    margin: 0;
    padding: 6px;
}

.footer__social-box {
    display: flex;
    justify-content: space-around;
    padding: 46px 0 72px 0;
    
}

.footer__social {
    text-decoration: none;
    color: rgb(34, 34, 34);
    display: block;
    font-size: 60px;
    transition: transform 0.2s ease-in;
}

.footer__social:hover {
    transform: scale(1.2);
}


.fa-shoe-prints {
    margin-left: 8px;
}

@media all and (max-width: 991px){
    .cover {
        min-width: 640px;
    }

    .navigation__list {
        flex-direction: column;
        padding-left: 8px;
    }
    .cover__header {
        position: absolute;
        justify-content: flex-start;
        top: 260px;
    }
    .about {
        min-width: 640px;
    }

    .about__grid {
        grid-template-columns: 1fr;
        grid-template-rows: 1fr 1fr;
    }

    .about__person-name {
        margin-top: 42px;
    }

    .hobby {
        min-width: 640px;
    }
    .hobby__grid {
        grid-template-columns: 1fr 1fr;
    }

    .hobby__rectangle--frontend {
        order: -1;
        grid-column: 1/3;
    }

    .links {
        min-width: 640px;
    }

    .contact {
        min-width: 640px;
    }

    .footer {
        min-width: 640px;
    }
}

@media all and (max-width: 768px){
    .cover {
        min-width: 200px;
    }

    .about {
        min-width: 200px;
    }

    .about__photo {
        background-position: center;
    }

    .hobby {
        min-width: 200px;
    }

    .hobby__grid {
        grid-template-columns: 1fr;
    }

    .hobby__rectangle--frontend {
        order: -1;
        grid-column: 1/2;
    }

    .links {
        min-width: 200px;
    }

    .contact {
        min-width: 200px;
    }
    .contact__form {
        grid-template-columns: 150px 1fr;
    }

    .footer {
        min-width: 200px;
    }


}

